# 6502-logisim

./: .gitignore  6502.ld  CMakeLists.txt  README.md  build.sh  links.txt  tc.cmake  vc-compiler.yaml  w65c02s.config
include/: io.h  tty.h
include/asm/: io.ah  tty.ah  zpage.ah
logisim/: main.circ
src/: entry.asm  main.c  romfs_loc.asm  tty.asm  zpage.asm
src/fs/romfs/: romfs.c  romfs.h
